feat : Result 생성 복사 시 LinkedHashMap 전환